2016-05-02  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Adjust layout.

	* src/ftinspect.cpp (MainGUI::createLayout): Move size, dpi, and
	zoom stuff one row down.
	s/fontLayout/fontSizeLayout/.

	* src/ftinspect.h: Updated.

2016-05-02  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add DPI control.

	* src/ftinspect.cpp (MainGUI::createLayout): Add `unitsComboBox' to
	select between px and pt.
	Add `dpiLabel' and `dpiSpinBox' to select the DPI value.
	(MainGUI::checkUnits): New function.
	(MainGUI::createConnections, MainGUI::setDefaults): Updated.

	* src/ftinspect.h: Updated.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Some more GUI initialization defaults.

	* src/ftinspect.cpp (MainGUI::setDefaults): Updated.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Avoid parameters for signal functions.

	This makes the code a bit more elegant.

	* src/ftinspect.cpp (MainGUI::checkHintingMode,
	MainGUI::checkAntiAliasing): Implement.
	(MainGUI::createConnections, MainGUI::setDefaults): Updated.

	* src/ftinspect.h: Updated.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Rename some enum values.

	* src/ftinspect.cpp, src/ftinspect.h: Updated.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Provide dummy default values for GUI initialization.

	* src/ftinspect.cpp (MainGUI::setDefaults): Set some values.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add signal for showPointsCheckBox.

	* src/ftinspect.cpp (MainGUI::checkShowPoints): New function.
	(MainGUI::createConnections): Add signal.

	* src/ftinspect.h: Updated.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add signal for antiAliasingComboBox.

	* src/ftinspect.cpp (MainGUI::checkAntiAliasing): New function.
	(MainGUI::createConnections): Add signal.

	* src/ftinspect.h: Updated.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Refine signal for hintingModeComboBox.

	* src/ftinspect.cpp (MainGUI::checkHintingMode): Grey out `slight'